--- a/Assets/styles/head_foot.css
+++ b/Assets/styles/head_foot.css
@@ -432,7 +432,7 @@ ul.mainNavigation > li {
   }
 }
 
-@media only screen and (max-width: 1007px) and (min-width: 640px) {
+@media only screen and (max-width: 1008px) and (min-width: 640px) {
   /*main nav*/
   header ul.mainNavigation {
     grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -534,15 +534,24 @@ ul.mainNavigation > li {
   :root {
     font-size: 16px;
   }
+  footer#endOfPage {
+    font-size: 16px;
+  }
 }
-@media only screen and (max-width: 1007px)
+@media only screen and (max-width: 1008px)
 and (min-width: 640px) {
   :root {
     font-size: 19px;
   }
+  footer#endOfPage {
+    font-size: 19px;
+  }
 }
-@media only screen and (max-width: 639px) {
+@media only screen and (max-width: 640px) {
   :root {
+    font-size: 21px;
+  }
+  footer#endOfPage {
     font-size: 21px;
   }
   a.homeMain {
